--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
@@ -23,8 +23,9 @@
         <app-fil-entrega-equipo-unidad (filter)="doFound($event)">
         </app-fil-entrega-equipo-unidad>
 
-        <div class="row table-responsive">
+        <div class="row {{ scroll(items) }}">
           <table
+            id="tabla"
             *ngIf="items.length > 0"
             class="table table-striped table-inverse text-center"
           >
@@ -100,10 +101,10 @@
                     <div class="col-md-6">
                       <button
                         type="button"
-                        title="Reporte Impresión"
+                        title="Acta de entrega"
                         placement="top"
                         show-delay="10"
-                        (click)="linkearReporte(item.id)"
+                        (click)="linkearActa(item.id)"
                         class="btn btn-info btn-sm"
                       >
                         <i class="fa fa-print"></i>
@@ -134,6 +135,15 @@
       </div>
     </div>
 
+    <button
+      *ngIf="items.length > 0"
+      (click)="exportTableToExcel('tabla', 'Equipos_entregados')"
+      class="btn btn-outline-success flotante"
+    >
+      <i class="far fa-file-excel"></i>
+      Descargar Excel
+    </button>
+
     <!-- modal-historial del equipo -->
     <!-- Modal -->
     <div
@@ -146,8 +156,15 @@
     >
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
-          <div class="modal-header" *ngIf="historial.length>0">
-            <h5 id="modal-title" class="modal-title">Historial: &nbsp;&nbsp; <b>{{historial[0].equipo.modelo.marca.nombre}} - {{historial[0].equipo.modelo.nombre}} - {{historial[0]?.equipo?.nroSerie}}</b></h5>
+          <div class="modal-header" *ngIf="historial.length > 0">
+            <h5 id="modal-title" class="modal-title">
+              Historial: &nbsp;&nbsp;
+              <b
+                >{{ historial[0].equipo.modelo.marca.nombre }} -
+                {{ historial[0].equipo.modelo.nombre }} -
+                {{ historial[0]?.equipo?.nroSerie }}</b
+              >
+            </h5>
             <button
               type="button"
               class="close"
@@ -167,18 +184,14 @@
               </thead>
               <tbody>
                 <tr *ngFor="let item of historial">
-                  <td>{{item.unidad.nombre}}</td>
-                  <td>{{item.fechaEntrega | date:'dd/MM/yyyy'}}</td>
+                  <td>{{ item.unidad.nombre }}</td>
+                  <td>{{ item.fechaEntrega | date: "dd/MM/yyyy" }}</td>
                 </tr>
               </tbody>
             </table>
           </div>
           <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-primary"
-              data-dismiss="modal"
-            >
+            <button type="button" class="btn btn-primary" data-dismiss="modal">
               Salir
             </button>
           </div>
