--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -16,7 +16,7 @@
         <app-fil-equipo (filter)="doFound($event)">
         </app-fil-equipo>
   
-        <div class="row table-responsive">
+        <div class="row {{scroll(items)}}">
             <table id="tabla" *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
                 <thead class="table-light">
                     <tr>
@@ -26,13 +26,12 @@
                         <th>Modelo</th>
                         <th>Proveedor</th>
                         <th>Estado</th>
-                        <th>Tipo Adq.</th>
+                        <th>Tipo Adquisicion</th>
                         <th>Acción</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr  *ngFor="let item of items">
-                        
+                    <tr *ngFor="let item of items">
                         <td>{{ item.tipoEquipo.nombre}}</td>
                         <td>{{ item.nroSerie }}</td>
                         <td>{{ item.modelo.marca.nombre | uppercase}}</td>
@@ -73,7 +72,15 @@
     </div>
     </div>
   </div>
-  
+  <br>
+  <button *ngIf="items.length > 0"
+    (click)="exportTableToExcel('tabla', 'Equipos')"
+    class="btn btn-outline-success flotante"
+  >
+  <i class="far fa-file-excel"></i>
+    Descargar Excel
+  </button>
+
   
   <!-- Modal -->
   <!-- <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
