--- a/Deposito/src/app/pages/componentes/acta-entrega/acta-entrega.component.html
+++ b/Deposito/src/app/pages/componentes/acta-entrega/acta-entrega.component.html
@@ -46,7 +46,7 @@
          <b>{{ item.recibe.nombre }} {{ item.recibe.apellido }}</b> con prestacion de
           servicio en <b>{{ item.unidad.nombre }}</b>, a quién seguidamente se procede
           a hacer entrega en carácter de <b>{{ instrumento(item.tipoEntrega) }}</b> de
-          un <b>{{ item.equipo.tipoEquipo.nombre }}</b>, marca:
+          un equipo <b>{{ item.equipo.tipoEquipo.nombre }}</b>, marca:
           <b>{{ item.equipo.modelo.marca.nombre }}</b>, modelo:
           <b>{{ item.equipo.modelo.nombre }}</b>, serie n° <b>{{ item.equipo.nroSerie }}</b>,
           con su correspondiente <b>{{ item.observaciones }}</b>, destinado al
