--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.scss
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.scss
@@ -57,6 +57,7 @@ thead tr th {
   top: 0;
   z-index: 10;
   background-color: black;
+  color: #ffffff !important;
 }
 .table-responsive {
   height:400px;
@@ -64,3 +65,4 @@ thead tr th {
   overflow-x: hidden;
   
 }
+
