seguimos con deposito

--- a/Deposito/src/app/pages/compartido/sidebar/sidebar.component.html
+++ b/Deposito/src/app/pages/compartido/sidebar/sidebar.component.html
@@ -8,8 +8,8 @@
       </a>
       <a class="simple-text logo-normal"> Dpto. Com. e Informática </a>
     </div>
-    <div class="sidebar-wrapper">
-      <ul class="nav text-center">
+    <div class="sidebar-wrapper {{scroll(menuItems)}}">
+      <ul class="nav">
         <li
           routerLinkActive="active"
           *ngFor="let menuItem of menuItems"
