--- a/Deposito/src/app/pages/compartido/sidebar/sidebar.component.scss
+++ b/Deposito/src/app/pages/compartido/sidebar/sidebar.component.scss
@@ -362,3 +362,10 @@
 .panel-header-lg {
   height: 380px;
 }
+//scroll
+.table-responsive {
+  height:400px;
+  overflow:scroll;
+  overflow-x: hidden;
+  
+}
