--- a/Deposito/src/app/pages/frm-abm/abm-entrega-equipo-unidad/abm-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-entrega-equipo-unidad/abm-entrega-equipo-unidad.component.html
@@ -25,7 +25,7 @@
         </div>
         <!-- numero de nota -->
         <div class="form-group col-md-6">
-          <label for="title">VERIFICADO</label>
+          <label for="title">Motivo Entrega</label>
           <select
             class="form-control"
             data-style="btn-primary"
@@ -37,6 +37,7 @@
           >
             <option value="SE">ORDEN DE SERVICIO EXTERNO</option>
             <option value="RE">ENTREGA POR RELEVAMIENTO</option>
+            <option value="DS">ENTREGA POR DIRECTIVA SUPERIOR</option>
           </select>
         </div>
       </div>
