--- a/Deposito/src/app/pages/lst/lst-detalle-compra/lst-detalle-compra.component.html
+++ b/Deposito/src/app/pages/lst/lst-detalle-compra/lst-detalle-compra.component.html
@@ -13,41 +13,37 @@
             </a>
         </div>
   
-        <app-fil-orden-compra (filter)="doFound($event)">
-        </app-fil-orden-compra>
+        <app-fil-detalle-compra (filter)="doFound($event)">
+        </app-fil-detalle-compra>
   
         <div class="row {{scroll(items)}}">
-            <table id="listacompra" *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
+            <table id="tabla" *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
                 <thead class="table-light">
                     <tr>
-                        <th>Orden Compra</th>
-                        <th>Licitación</th>
+                        <th>Tipo Equipo</th>
+                        <th>Modelo</th>
+                        <th>Cantidad Compra</th>
+                        <th>Cantidad Ingreso</th>
                         <th>Proveedor</th>
-                        <th>Fecha Compra</th>
-                        <th>Pago</th>
-                        <th>Tipo Compra</th>
+                        <!-- <th>Estado</th>
+                        <th>Tipo Adquisicion</th> -->
                         <th *ngIf="!exportar">Acción</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let item of items">
-                        <td>{{ item.ordenCompraNum}}</td>
-                        <td>{{ item.nroLicitacion }}</td>
-                        <td>{{ item.proveedor.nombre| uppercase}}</td>
-                        <td>{{ item.fechaOrdenCompra | date: "dd/MM/yyyy"}}</td>
-                        <td>{{ item.fechaPago| date: "dd/MM/yyyy"}}</td>
-                        <td>{{ tipoCompra(item.tipoCompra)}}</td>
-                          <td *ngIf="!exportar">
+                        <td>{{ item.tipo_equipo.nombre}}</td>
+                        <td>{{ item.modelo.nombre | uppercase}}</td>
+                        <td>{{ item.cantidad_compra }}</td>
+                        <td>{{ item.cantidad_ingreso}}</td>
+                        <td>{{ item.compra.proveedor.nombre | uppercase}}</td>
+                        <!-- <td class="{{colores(item.estado.id)}}" ><em><b style="font-size: 15px;">{{ item.estado.nombre }}</b></em></td> -->
+                        <!-- <td>{{ tipoAdquisicion(item.tipoAlta)|uppercase }}</td> -->
+                        <td *ngIf="!exportar" >
                             <button type="button" title="Modificar" placement="top" show-delay="10"
                                 (click)="linkear(item.id)" class="btn btn-secondary btn-sm">
                                 <i class="fas fa-edit"></i>
                             </button>
-                          &nbsp;
-                          <button type="button" title="Agregar detalle compra" placement="top" show-delay="10"
-                                (click)="linkearDetalle(item.id)" class="btn btn-warning btn-sm">
-                                <i class="fas fa-download"></i>
-                            </button>
-                           
                         </td>
                     </tr>
                 </tbody>
@@ -73,7 +69,7 @@
   </div>
   <br>
   <button *ngIf="items.length > 0"
-    (click)="exportTableToExcel('listacompra', 'compra')"
+    (click)="exportTableToExcel('tabla', 'Equipos')"
     class="btn btn-outline-success flotante"
   >
   <i class="far fa-file-excel"></i>
